--- a/CustomerLogin/Tracking/view/frontend/web/css/customer-navigation-section.css
+++ b/CustomerLogin/Tracking/view/frontend/web/css/customer-navigation-section.css
@@ -62,10 +62,11 @@ h5{
 	font-weight: bold;
 }
 
+@media only screen and (min-width: 639px){
 .table-login-history-data {
-    margin-top: -40px;
+    margin-top: -97px;
 }
-
+}
 .table-login-history-data td {
 	text-align: center;
 }
@@ -104,6 +105,10 @@ span.login-data-value{
 	.table-wrapper .table:not(.totals):not(.cart):not(.table-comparison) tbody > tr > td {
 		text-align: left;
 }
+
+	.table-login-history-data {
+	    margin-top: -161px;
+	}
 }
 
 div.login-data{
