--- a/CustomerLogin/Tracking/view/frontend/layout/customer_account_index.xml
+++ b/CustomerLogin/Tracking/view/frontend/layout/customer_account_index.xml
@@ -6,8 +6,10 @@
  */
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-left" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd"> 
+    <head>
+        <css src="CustomerLogin_Tracking::css/customer-navigation-section.css" />
+    </head>
     <update handle="customer_account"/>
-   
     <body>
         <referenceBlock name="page.main.title">
             <action method="setPageTitle">
